--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <input type="text" class="connexion__info" placeholder="Votre mot de passe">
                 <input type="submit" class="connexion__boutton" placeholder="Se connecter">
             </form>
+            <a href="#">Mot de passe oublié ?</a><a href="">S'inscrire</a>
         </div>
     </div>
 
